Added article compilation with metadata and layout feature

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.33</version>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>72.1</version>
+        </dependency>
     </dependencies>
 
     <build>
